Fix bug where dragging a ticket from the bottom position of a list, or to the bottom position of a list, would cause a scrollbar to appear to the side of the tickets-list div

--- a/frontend/src/app/features/board-page/components/list/list.component.scss
+++ b/frontend/src/app/features/board-page/components/list/list.component.scss
@@ -104,7 +104,7 @@
   .ticket-list {
     display: flex;
     flex-direction: column;
-    gap: 0.6rem;
+    gap: 10px;
     overflow-y: auto; /* Enable vertical scrolling */
     flex-grow: 1; /* Allow the ticket list to grow and fill available space */
     scrollbar-width: thin;
